tests/should_fail/paramter_count_a.c
int function(int a, int b, int c);

int main(void) {
	function(2);
}
